GNOME Bugzilla – Bug 777423
(Week view) week-view may not list the 3rd full day event
Last modified: 2017-05-04 01:00:19 UTC
Week view may sometime ignore the 3rd fullday event to be listed. How to reproduce: 1. Open week view 2. Add 4 full single day events to the same date. Now the week-view will list 2 events and says 'Other 2 events' (This may depend on screen size. So I don't know if this same method will help one to reproduce the bug) 3. Now dnd any one event to some other date. Result: Week view now lists only two events in the date where there actually have 3 events in total. It also doesn't show 'other n events' or the expand button in left. Switching the week brings back the event to view though.
This is per the proposed designs of the Week view [1]. What's the problem with this behavior? [1] https://github.com/gnome-design-team/gnome-mockups/blob/master/calendar/week-view-header-populated.png
Created attachment 344388 [details] week-view: deleting 4th event (video) (In reply to Georges Basile Stavracas Neto from comment #1) > This is per the proposed designs of the Week view [1]. What's the problem > with this behavior? I think gnome-calendar is not acting as it is supposed to be. Please see the attached screencast to see what it happens to me (when I delete the fourth event, the 'Other n event' is not shown, nor the expand button, and week-view lists only 2 events (though there are actually 3)) Thanks
Created attachment 350916 [details] [review] Patch for bugfix
Review of attachment 350916 [details] [review]: Nice catch! The code looks good and sweet, but the commit message needs some improvements. First, the title does not need "Bugfix:". In the body of the commit message, you should explain what's happening, and how the fix works. Please follow the guidelines at https://wiki.gnome.org/Newcomers/SubmitPatch on how the commit message should be formatted.
Created attachment 351007 [details] [review] patchV2 Thanks for feedback, Is this right?
Review of attachment 351007 [details] [review]: Looks good. Thank you so much for the patch, and I'm looking forward your contributions! =)
Pushing to master and gnome-3-24. This fix will be available in Calendar 3.24.2 and 3.25.2. Also closing the bug as RESOLVED FIXED. Attachment 351007 [details] pushed as a6e347d and e00bed4 - week-header: Move events at column after remove event from list